--- a/template/package.json
+++ b/template/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "vue": "^2.5.2"{{#router}},
-    "vue-router": "^3.0.1"{{/router}}
+    "vuex-router-sync": "^5.0.0",
+    "vue-router": "^3.0.1"{{/router}},
+    "vuex": "^3.0.0",
+    "axios": "^0.17.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
